--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/StreamingAssets.loader.js";
+      var loaderUrl = buildUrl + "/MyArenaWebBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/StreamingAssets.data",
-        frameworkUrl: buildUrl + "/StreamingAssets.framework.js",
-        codeUrl: buildUrl + "/StreamingAssets.wasm",
+        dataUrl: buildUrl + "/MyArenaWebBuild.data",
+        frameworkUrl: buildUrl + "/MyArenaWebBuild.framework.js",
+        codeUrl: buildUrl + "/MyArenaWebBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "arena",
